--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bun": "^1.1.42",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "dayjs": "^1.11.13",
     "hono": "^4.6.14",
     "lucide-react": "^0.511.0",
